# YAMS

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  README.md  YAMS.sln  diff.txt  pyproject.toml  schema.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: dependabot.yml  python.yml
BenchmarkTest/: BenchmarkTest.csproj  DecompileBenchmark.cs  Program.cs
GenerateTexturePage/: GenerateTexturePage.csproj  PageItem.cs  Program.cs  ProjectDirAttribute.cs
UndertaleModTool/UndertaleModLib/: UndertaleModLib.csproj
YAMS-CLI/: Program.cs  SeedObject.cs  YAMS-CLI.csproj  example.json
YAMS-LIB/: Exceptions.cs  ExtensionMethods.cs  MusicShuffle.cs  PageItem.cs  Program.cs  SeedObject.cs  YAMS-LIB.csproj  example.json
YAMS-LIB/patches/: AddBossMWTracking.cs  AddCreditsTracking.cs  AddDNAItem.cs  AddInGameHints.cs  AddMissingDoors.cs  AdjustSavingScripts.cs  ColoredLogBook.cs  CosmeticHud.cs  CosmeticRotation.cs  CustomDarknessLevels.cs  CustomSuitDamageReduction.cs  CustomWaterLevel.cs  DecoupleItemsFromLocations.cs  DoorLockRando.cs  EnemyRando.cs  EntranceRando.cs  FixOverlappingSongs.cs  HistoryLogEntry.cs  LoadFromStart.cs  ModifyItems.cs  MoveGeothermalPB.cs  Multiworld.cs  PipeRando.cs  RandomKnockback.cs  RandovaniaStuff.cs  RequiredMains.cs  Sprites.cs  StartingItems.cs
YAMS-LIB/patches/customItems/: AddDNAItem.cs  ArmCannonItem.cs  FlashLightItem.cs  IBJItem.cs  LongBeamItem.cs  MetroidLures.cs  SpeedBoosterUpgradeItem.cs  WallJumpBootsItem.cs
YAMS-LIB/patches/decompilerWorkarounds/: FixCharacterStepEvent.cs
YAMS-LIB/patches/geometry/: AddA6Pipes.cs  AddMissingDoors.cs  BombBeforeA3.cs  EnforceScrewForBG2.cs  MandatoryGeometryChanges.cs  ScrewPipeBlocks.cs  SoftlockPrevention.cs
YAMS-LIB/patches/misc/: DontRespawnBombBlocks.cs  FlippedGame.cs  RemoveHelperSeptoggs.cs
YAMS-LIB/patches/qol/: BG3MakeSeptoggSpawnImmediately.cs  DisplayRoomNameOnHUD.cs  DisplayRoomNamesOnMap.cs  DontDespawnWeaponsOffscreen.cs  GameplayCutsceneSkip.cs  MakeChargeBeamAlwaysHitMetroids.cs  RoomFeatureMapText.cs  SaveCutsceneSkip.cs  ShowFullyUnexploredMap.cs  ShowUnveiledBreakables.cs  (+1 more)
YAMS-LIB/sprites/: .gitignore  Attribution.md
am2r_yams/: Patcher.py  __init__.py  wrapper.py
am2r_yams/__pyinstaller/: hook-am2r_yams.py
am2r_yams_tests/: test_meta.py
yams-py/: setup.cfg
yams-py/yams-py/: Patcher.py
yams-py/yams-py/__pyinstaller/: __init__.py  hook-yams-py.py
yams_py/: Patcher.py
yams_py/__pyinstaller/: hook-yams-py.py
yams_py_tests/: test_meta.py
